--- a/trunk/template/objcss/default/window.css
+++ b/trunk/template/objcss/default/window.css
@@ -1,23 +1,44 @@
-div.window_default_title,
-div.window_default_title_horizontal
+div.window_default_title
 {
 	overflow:hidden;
-	background-image: url('window/border.png');
-	background-position: left;
-	background-repeat: no-repeat;
+	background: url("window/vline.gif") repeat-x scroll 0 -1px transparent;
 	height:16px;
 	font-weight: bold;
-	background-color:#EFEDDE;
 	border: 1px solid #8A867A;
 	padding : 2px 0px 4px 10px;
 }
 
-div.window_default {
-	border-color : #316AC5;
+div.window_default_title_horizontal
+{
+	overflow:hidden;
+	background: url("window/hline.gif") repeat-y scroll 20px -1px transparent;
+	height:16px;
+	font-weight: bold;
+	border: 1px solid #8A867A;
+	padding : 2px 0px 4px 10px;
+}
+
+div.window_default_horizontal {
+	border-color : #8A867A;
 	border-style : solid;
-	border-width : 1px;
+	border-top-width : 1px;
+	border-bottom-width : 1px;
+	border-left-width : 0px;
+	border-right-width : 1px;
 	padding: 5px;
-	background-color: #C6D0FF;
+	background-color: #F3F3F3;
+	overflow:hidden;
+}
+
+div.window_default_vertical {
+	border-color : #8A867A;
+	border-style : solid;
+	border-top-width : 0px;
+	border-bottom-width : 1px;
+	border-left-width : 1px;
+	border-right-width : 1px;
+	padding: 5px;
+	background-color: #F3F3F3;
 	overflow:hidden;
 }
 
