--- a/trunk/template/objcss/default/dsnav.css
+++ b/trunk/template/objcss/default/dsnav.css
@@ -333,10 +333,18 @@ div.dsnav_default_last_gray {
 	margin: 1px;
 }
 
-input.dsnav_default_find {
-	background-color: #FFF;
-	margin-top: 1px;
-	border: 0px none;
+input.dsnav_default_find  {
+	background-color: #FFF !important;
+	margin-top: 1px !important;
+	border: 0px none !important;
+	font-size:12px !important;	
+}
+
+select.dsnav_default_find  {
+	background-color: #FFF !important;
+	margin-top: 1px !important;
+	border: 0px none !important;
+	font-size:12px !important;	
 }
 
 div.dsnav_default_find {
