--- a/trunk/template/objcss/default/page.css
+++ b/trunk/template/objcss/default/page.css
@@ -191,7 +191,10 @@ input[type="text"]:hover {
 	-moz-box-shadow: 1px 1px 5px #888;
 	-webkit-box-shadow: 1px 1px 5px #888;
 }
-
+input[type="button"]
+{
+	cursor:pointer;
+}
 input.regerror:focus
 {
 	 border: 1px dashed red;
